feat: adiciona scripts `lint:check` e `lint:fix`
editor config ajuda padronizar antes
a escrita do cód enquanto escreve mas não garante que todos arquivos passados estarão no padrão..

prettier garente o padrão, estilo certo ele foca depois de salvar o arquivo

    "lint:check": "prettier --check .", verifica código que nao estam no padrão
    "lint:fix": "prettier --write ." altera para o padrão padronizado em todos arquivos, antigos e novos

pra não rodar comandos acima manual, usamos a extension prettier

--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "description": "Implementação do https://www.tabnews.com.br/",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "next dev"
+    "dev": "next dev",
+    "lint:check": "prettier --check .",
+    "lint:fix": "prettier --write ."
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "next": "^13.1.6",
     "express": "^4.19.2",
+    "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.5"
   }
 }
