--- a/compose.yml
+++ b/compose.yml
@@ -15,9 +15,5 @@ services:
     image: postgres:16.0-alpine3.18
     ports:
       - "5432:5432"
-    # volumes:
-    #   - ./data:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_PASSWORD=local_password
-      # - POSTGRES_USER=userApp
-      # - POSTGRES_DB=tabnews
+    env_file:
+      - .env
