--- a/.env.development
+++ b/.env.development
@@ -6,4 +6,5 @@ POSTGRES_PASSWORD=local_password
 
 ## forma de passar credenciais pro node-pg-migrate pra se connctar ao banco
 # DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
-DATABASE_URL=postgres://local_user:local_password@database:5432/local_db
+# DATABASE_URL=postgres://local_user:local_password@database:5432/local_db
+DATABASE_URL=postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@$POSTGRES_HOST:$POSTGRES_PORT/$POSTGRES_DB
