--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clone-tabnews",
+  "name": "clone-do-tabnews",
   "version": "1.0.0",
   "description": "Implementação do https://www.tabnews.com.br/",
   "main": "index.js",
