feat: adds `wait-for-postgres` scripts

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Implementação do https://www.tabnews.com.br/",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "npm run migration:up && next dev",
     "services:up": "docker compose up -d",
     "servcies:down": "docker compose down",
     "lint:check": "prettier --check .",
@@ -13,7 +13,8 @@
     "test:watch": "jest --watchAll --runInBand",
     "migration:create": "node-pg-migrate -m infra/migrations create",
     "migration:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
-    "migration:down": "node-pg-migrate -m infra/migrations --envPath .env.development down"
+    "migration:down": "node-pg-migrate -m infra/migrations --envPath .env.development down",
+    "wait-for-postgres": "node infra/scripts/wait-for-postgres.js"
   },
   "author": "John Maicon",
   "license": "MIT",
