--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "servcies:down": "docker compose down",
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
-    "test": "concurrently -n jest -k --s command-jest \"jest --runInBand\"",
+    "test": "npm run services:up && concurrently -n next,jest --hide next -k -s command-jest \"next dev\" \"jest --runInBand --verbose\"",
     "test:watch": "jest --watchAll --runInBand",
     "migration:create": "node-pg-migrate -m infra/migrations create",
     "migration:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
