--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "description": "Implementação do https://www.tabnews.com.br/",
   "main": "index.js",
   "scripts": {
-    "dev": "npm run migration:up && next dev",
+    "dev": "npm run services:up && npm run wait-for-postgres && npm run migration:up && next dev",
     "services:up": "docker compose up -d",
-    "servcies:down": "docker compose down",
+    "services:stop": "docker compose stop",
+    "services:down": "docker compose down",
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
-    "test": "npm run services:up && concurrently -n next,jest --hide next -k -s command-jest \"next dev\" \"jest --runInBand --verbose\"",
+    "test": "npm run services:up && ./wait-for-it.sh localhost:5432 --timeout=60 --strict && concurrently -n next,jest --hide next -k -s command-jest \"next dev\" \"jest --runInBand --verbose\"",
     "test:watch": "jest --watchAll --runInBand",
     "migration:create": "node-pg-migrate -m infra/migrations create",
     "migration:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
-    "migration:down": "node-pg-migrate -m infra/migrations --envPath .env.development down",
     "wait-for-postgres": "node infra/scripts/wait-for-postgres.js"
   },
   "author": "John Maicon",
@@ -22,8 +22,7 @@
     "async-retry": "^1.3.3",
     "dotenv": "^16.4.4",
     "dotenv-expand": "^11.0.6",
-    "express": "^4.19.2",
-    "next": "^14.2.15",
+    "next": "^13.1.6",
     "node-pg-migrate": "^6.2.2",
     "pg": "^8.11.3",
     "react": "^18.2.0",
@@ -32,6 +31,6 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "jest": "^29.6.2",
-    "prettier": "^3.2.5"
+    "prettier": "^2.8.8"
   }
 }
