fix prettier style linting

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -12,7 +12,7 @@ jobs:
 
       - uses: actions/setup-node@v4 # Configura o Node.js
         with:
-          node-version: "lts/hydrogen" # Usa a versão LTS "hydrogen" do Node.js
+          node-version: 'lts/hydrogen' # Usa a versão LTS "hydrogen" do Node.js
 
       - run: npm ci # Instala as dependências usando `npm ci`
 
