--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "concurrently": "^8.2.2",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^28.6.0",
     "jest": "^29.6.2",
+    "npm": "^10.9.0",
     "prettier": "^3.2.5"
   }
 }
