--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "migration:up": "node-pg-migrate -m infra/migrations --envPath .env.development up",
     "migration:down": "node-pg-migrate -m infra/migrations --envPath .env.development down",
     "wait-for-postgres": "node infra/scripts/wait-for-postgres.js",
-    "prepare": "husky"
+    "prepare": "husky",
+    "commit": "cz"
   },
   "author": "John Maicon",
   "license": "MIT",
   "dependencies": {
     "async-retry": "^1.3.3",
+    "commitizen": "^4.3.0",
     "dotenv": "^16.4.4",
     "dotenv-expand": "^11.0.6",
     "express": "^4.19.2",
@@ -36,6 +38,7 @@
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "concurrently": "^8.2.2",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "^9.1.0",
@@ -44,5 +47,10 @@
     "jest": "^29.6.2",
     "npm": "^10.9.0",
     "prettier": "^3.2.5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
