--- a/package.json
+++ b/package.json
@@ -23,30 +23,30 @@
   "author": "John Maicon",
   "license": "MIT",
   "dependencies": {
-    "async-retry": "^1.3.3",
-    "commitizen": "^4.3.0",
-    "dotenv": "^16.4.4",
-    "dotenv-expand": "^11.0.6",
-    "express": "^4.19.2",
-    "next": "^14.2.15",
-    "node-pg-migrate": "^6.2.2",
-    "pg": "^8.11.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "async-retry": "1.3.3",
+    "commitizen": "4.3.0",
+    "dotenv": "16.4.4",
+    "dotenv-expand": "11.0.6",
+    "express": "4.19.2",
+    "next": "14.2.15",
+    "node-pg-migrate": "6.2.2",
+    "pg": "8.11.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.3.0",
-    "@commitlint/config-conventional": "^19.2.2",
-    "concurrently": "^8.2.2",
-    "cz-conventional-changelog": "^3.3.0",
+    "@commitlint/cli": "19.3.0",
+    "@commitlint/config-conventional": "19.2.2",
+    "concurrently": "8.2.2",
+    "cz-conventional-changelog": "3.3.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.4",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jest": "^28.6.0",
-    "husky": "^9.1.4",
-    "jest": "^29.6.2",
-    "npm": "^10.9.0",
-    "prettier": "^3.2.5"
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-jest": "28.6.0",
+    "husky": "9.1.4",
+    "jest": "29.6.2",
+    "npm": "10.9.0",
+    "prettier": "3.2.5"
   },
   "config": {
     "commitizen": {
