--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "async-retry": "1.3.3",
     "dotenv": "16.4.5",
     "dotenv-expand": "11.0.6",
-    "next": "14.2.5",
+    "next": "^14.2.23",
+    "next-connect": "1.0.0",
     "node-pg-migrate": "7.6.1",
     "pg": "8.12.0",
     "react": "18.3.1",
